--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -114,42 +114,23 @@
      "output_type": "stream",
      "text": [
       "Starting Episode 1 ...\n",
+      " LED: 3    | Arm: 2 |\n",
+      " Action: R | Arm: 3 | Reward: -1 \n",
+      " Action: P | Arm: 3 | Reward: -1 \n",
+      "Final Score: -2.0\n",
+      "Starting Episode 2 ...\n",
       " LED: 2    | Arm: 0 |\n",
       " Action: L | Arm: 0 | Reward: -1 \n",
       " Action: P | Arm: 0 | Reward: -1 \n",
-      " Action: P | Arm: 0 | Reward: -1 \n",
-      " Action: P | Arm: 0 | Reward: -1 \n",
-      " Action: L | Arm: 0 | Reward: -1 \n",
-      " Action: P | Arm: 0 | Reward: -1 \n",
-      " Action: L | Arm: 0 | Reward: -1 \n",
-      " Action: P | Arm: 0 | Reward: -1 \n",
       " Action: R | Arm: 1 | Reward: -1 \n",
       " Action: P | Arm: 1 | Reward: -1 \n",
-      " Action: R | Arm: 2 | Reward: -1 \n",
-      " Action: L | Arm: 1 | Reward: -1 \n",
-      " Action: R | Arm: 2 | Reward: -1 \n",
-      " Action: L | Arm: 1 | Reward: -1 \n",
-      " Action: P | Arm: 1 | Reward: -1 \n",
-      " Action: L | Arm: 0 | Reward: -1 \n",
-      " Action: P | Arm: 0 | Reward: -1 \n",
-      " Action: P | Arm: 0 | Reward: -1 \n",
-      " Action: L | Arm: 0 | Reward: -1 \n",
-      " Action: R | Arm: 1 | Reward: -1 \n",
-      " Action: R | Arm: 2 | Reward: -1 \n",
-      " Action: R | Arm: 3 | Reward: -1 \n",
-      " Action: R | Arm: 3 | Reward: -1 \n",
-      " Action: R | Arm: 3 | Reward: -1 \n",
-      " Action: L | Arm: 2 | Reward: -1 \n",
-      " Action: P | Arm: 2 | Reward: -1 \n",
-      "Final Score: -26.0\n",
-      "Starting Episode 2 ...\n",
-      " LED: 3    | Arm: 1 |\n",
-      " Action: R | Arm: 2 | Reward: -1 \n",
-      " Action: L | Arm: 1 | Reward: -1 \n",
       " Action: R | Arm: 2 | Reward: -1 \n",
       " Action: R | Arm: 3 | Reward: -1 \n",
       " Action: P | Arm: 3 | Reward: -1 \n",
-      "Final Score: -5.0\n"
+      " Action: R | Arm: 3 | Reward: -1 \n",
+      " Action: L | Arm: 2 | Reward: -1 \n",
+      " Action: P | Arm: 2 | Reward: -1 \n",
+      "Final Score: -10.0\n"
      ]
     }
    ],
@@ -282,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -319,7 +300,7 @@
     "        episode.append((state, action, reward))\n",
     "        \n",
     "        # finish the episode\n",
-    "        for i in range(10):\n",
+    "        for i in range(100):\n",
     "            if not done:\n",
     "                # get state index\n",
     "                state = get_state(board, pos, nLED)\n",
@@ -343,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -393,21 +374,32 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 0, 0, 2, 1, 0, 0, 2, 2, 1, 0, 2, 2, 2, 1])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## will delete later"
+    "np.argmax(Q, axis=1)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "from jetson_hard_env import JetsonHardEnv, decipher_action\n",
+    "## will delete later\n",
+    "```python\n",
+    "from jetson_hard_env import JetsonHardEnv\n",
     "\n",
     "env = JetsonHardEnv()\n",
     "for i in range(5):\n",
@@ -420,7 +412,8 @@
     "        print('| Action: %s | Board: %s | Arm: %d |' % (decipher_action(action), board, pos))\n",
     "        if done:\n",
     "            print('Task completed successfully!')\n",
-    "            break"
+    "            break\n",
+    "```"
    ]
   }
  ],
