--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -60,12 +60,10 @@
     "\n",
     "want to teach artificially intelligent agent to learn from interactions with its environment.  This robot will learn a lot like humans do: through trial-and-error.  \n",
     "\n",
-    "Although possible to hard-code in this case, often in many cases where RL is appropriate, there are too many possible states.  want the agent to learn for itself through interaction.\n",
-    "\n",
     "- Initially, the robot doesn't know much about its environment.  It knows that there are 20 possible states, and it can take 3 possible actions, but that's it.  \n",
     "- actions influence states\n",
     "- robot doesn't know how to doesn't know how each action influences state, or which states are most desirable. it only wants to win the game, and get as many points as possible.\n",
-    "- we teach the robot to learn by rewarding it when it arrives at the desired outcome, or punishing it other ... reinforces the best behavior.\n",
+    "- we teach the robot to learn by rewarding it when it arrives at the desired outcome, or punishing it ... reinforces the best behavior.\n",
     "- given well-defined input and a goal, can learn by interacting with the environment \n",
     "- on the policy // The goal of the agent is to find a way to select the best action in response to the state ... where how good an  action is is determined by the reward that the agent collects\n",
     "\n",
@@ -114,23 +112,32 @@
      "output_type": "stream",
      "text": [
       "Starting Episode 1 ...\n",
-      " LED: 3    | Arm: 2 |\n",
-      " Action: R | Arm: 3 | Reward: -1 \n",
-      " Action: P | Arm: 3 | Reward: -1 \n",
-      "Final Score: -2.0\n",
+      " LED: 2    | Arm: 2 |\n",
+      " Action: P | Arm: 2 | Reward: -1 \n",
+      "Final Score: -1.0\n",
       "Starting Episode 2 ...\n",
-      " LED: 2    | Arm: 0 |\n",
+      " LED: 3    | Arm: 1 |\n",
+      " Action: P | Arm: 1 | Reward: -1 \n",
       " Action: L | Arm: 0 | Reward: -1 \n",
-      " Action: P | Arm: 0 | Reward: -1 \n",
       " Action: R | Arm: 1 | Reward: -1 \n",
       " Action: P | Arm: 1 | Reward: -1 \n",
       " Action: R | Arm: 2 | Reward: -1 \n",
-      " Action: R | Arm: 3 | Reward: -1 \n",
-      " Action: P | Arm: 3 | Reward: -1 \n",
+      " Action: P | Arm: 2 | Reward: -1 \n",
+      " Action: P | Arm: 2 | Reward: -1 \n",
+      " Action: P | Arm: 2 | Reward: -1 \n",
       " Action: R | Arm: 3 | Reward: -1 \n",
       " Action: L | Arm: 2 | Reward: -1 \n",
       " Action: P | Arm: 2 | Reward: -1 \n",
-      "Final Score: -10.0\n"
+      " Action: L | Arm: 1 | Reward: -1 \n",
+      " Action: R | Arm: 2 | Reward: -1 \n",
+      " Action: P | Arm: 2 | Reward: -1 \n",
+      " Action: L | Arm: 1 | Reward: -1 \n",
+      " Action: R | Arm: 2 | Reward: -1 \n",
+      " Action: L | Arm: 1 | Reward: -1 \n",
+      " Action: R | Arm: 2 | Reward: -1 \n",
+      " Action: R | Arm: 3 | Reward: -1 \n",
+      " Action: P | Arm: 3 | Reward: -1 \n",
+      "Final Score: -20.0\n"
      ]
     }
    ],
@@ -227,38 +234,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, you will implement a method known as **Monte Carlo with Exploring Starts** to guide your agent to obtain the optimal policy.\n",
+    "The goal of your agent is to find the **optimal policy**.  The optimal policy specifies - for each possible starting game state - the best initial action that the agent should take from that state, towards its goal of maximizing the game score.\n",
     "\n",
-    "The optimal policy specifies - for each possible starting game state - the best initial action that the agent should take from that state, towards its goal of maximizing the game score.\n",
+    "For instance, consider the case that the game starts in state `0`.  This state corresponds to arm position `0` and lit LED position `0`.  In this case, the robot should select action **P**ush, to obtain a reward of `-1` and end the game with a final score of `-1` immediately after.\n",
     "\n",
-    "For instance, consider the case that the game starts in state `0`.  This state corresponds to arm position `0` and lit LED position `0` (you can verify this in the output from the above code cell).  In this case, the robot should select action **P**ush, to obtain a reward of `-1` and end the game with a final score of `-1` immediately after.\n",
-    "\n",
-    "Likewise, state `1` corresponds to arm position `1` and lit LED position `0`.  In this case, the robot should decide to move **L**eft as the best initial move.  In this way, the robot can select to **P**ush at the next step and end the game ith a best final score of `-2`. \n",
+    "Likewise, state `1` corresponds to arm position `1` and lit LED position `0`.  In this case, the robot should decide to move **L**eft as the best initial move.  In this way, the robot can select to **P**ush at the next step and end the game with a best final score of `-2`. \n",
     "\n",
     "Take the time now to look at the printed optimal policy below.  Check to make sure that you can see why these actions are optimal, in the context of their corresponding game states!\n",
     "\n",
     "```\n",
-    "State: 0 | Best Action: P\n",
-    "State: 1 | Best Action: L\n",
-    "State: 2 | Best Action: L\n",
-    "State: 3 | Best Action: L\n",
-    "State: 4 | Best Action: R\n",
-    "State: 5 | Best Action: P\n",
-    "State: 6 | Best Action: L\n",
-    "State: 7 | Best Action: L\n",
-    "State: 8 | Best Action: R\n",
-    "State: 9 | Best Action: R\n",
-    "State: 10 | Best Action: P\n",
-    "State: 11 | Best Action: L\n",
-    "State: 12 | Best Action: R\n",
-    "State: 13 | Best Action: R\n",
-    "State: 14 | Best Action: R\n",
-    "State: 15 | Best Action: P\n",
+    "Board: 0 | Pos: 0 | State: 0 | Best Action: P\n",
+    "Board: 0 | Pos: 1 | State: 1 | Best Action: L\n",
+    "Board: 0 | Pos: 2 | State: 2 | Best Action: L\n",
+    "Board: 0 | Pos: 3 | State: 3 | Best Action: L\n",
+    "Board: 1 | Pos: 0 | State: 4 | Best Action: R\n",
+    "Board: 1 | Pos: 1 | State: 5 | Best Action: P\n",
+    "Board: 1 | Pos: 2 | State: 6 | Best Action: L\n",
+    "Board: 1 | Pos: 3 | State: 7 | Best Action: L\n",
+    "Board: 2 | Pos: 0 | State: 8 | Best Action: R\n",
+    "Board: 2 | Pos: 1 | State: 9 | Best Action: R\n",
+    "Board: 2 | Pos: 2 | State: 10 | Best Action: P\n",
+    "Board: 2 | Pos: 3 | State: 11 | Best Action: L\n",
+    "Board: 3 | Pos: 0 | State: 12 | Best Action: R\n",
+    "Board: 3 | Pos: 1 | State: 13 | Best Action: R\n",
+    "Board: 3 | Pos: 2 | State: 14 | Best Action: R\n",
+    "Board: 3 | Pos: 3 | State: 15 | Best Action: P\n",
     "```\n",
     "\n",
-    "The optimal policy printed above is what we would like the agent to learn.\n",
+    "Now, you will implement a method known as **Monte Carlo with Exploring Starts** to guide your agent to obtain this optimal policy (printed above).\n",
     "\n",
-    "Towards this goal of finding the optimal policy, the agent will maintain a matrix with 16 rows and 3 columns, containing ..."
+    "As part of this algorithm, the agent will maintain a numpy array $Q$ with 16 rows and 3 columns, containing ... //\n",
+    "\n",
+    "*This description of Monte Carlo Exploring Starts still needs to be fleshed out.  The plan is that the attendee will code everything from scratch.*"
    ]
   },
   {
@@ -279,9 +286,12 @@
     "    nA = env.nA                       # number of actions\n",
     "    \n",
     "    # initialize empty arrays\n",
+    "    Q = np.zeros((nS, nA), dtype=float)\n",
+    "    \n",
+    "    ##### CODE ABOVE THIS LINE PROVIDED TO ATTENDEES.  THEY HAVE TO WRITE EVERYTHING BELOW. #####\n",
+    "    \n",
     "    returns_sum = np.zeros((nS, nA), dtype=float)\n",
     "    returns_count = np.zeros((nS, nA), dtype=float)\n",
-    "    Q = np.zeros((nS, nA), dtype=float)\n",
     "    \n",
     "    # loop over episodes\n",
     "    for i_episode in range(1, num_episodes+1):\n",
@@ -368,6 +378,7 @@
     }
    ],
    "source": [
+    "# print your agent's learned policy\n",
     "for state in range(Q.shape[0]):\n",
     "    board, pos = get_board_and_pos(state, env.nLED)\n",
     "    print('Board: %d | Pos: %d | State: %d | Best Action: %s' % (board, pos, state, decipher_action(np.argmax(Q[state]))))"
@@ -390,30 +401,8 @@
     }
    ],
    "source": [
+    "# cleaner printing of learned policy\n",
     "np.argmax(Q, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## will delete later\n",
-    "```python\n",
-    "from jetson_hard_env import JetsonHardEnv\n",
-    "\n",
-    "env = JetsonHardEnv()\n",
-    "for i in range(5):\n",
-    "    board, pos = env.reset()\n",
-    "    print('Resetting environment ...')\n",
-    "    print('| __________ | Board: %s | Arm: %d |' % (board, pos))\n",
-    "    for i in range(10):\n",
-    "        action = env.get_random_action()\n",
-    "        board, pos, reward, done = env.step(action)\n",
-    "        print('| Action: %s | Board: %s | Arm: %d |' % (decipher_action(action), board, pos))\n",
-    "        if done:\n",
-    "            print('Task completed successfully!')\n",
-    "            break\n",
-    "```"
    ]
   }
  ],
