--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -125,38 +125,30 @@
      "output_type": "stream",
      "text": [
       "Starting Episode 1 ...\n",
-      " LED: 2    | Arm: 3 |\n",
-      " Action: P | Arm: 3 | Reward: -1 \n",
-      " Action: L | Arm: 2 | Reward: -1 \n",
-      " Action: P | Arm: 2 | Reward: -1 \n",
-      "Final Score: -3\n",
+      " LED: 0    | Arm: 1 |\n",
+      " Action: L | Arm: 0 | Reward: -1 \n",
+      " Action: P | Arm: 0 | Reward: -1 \n",
+      "Final Score: -2\n",
       "Starting Episode 2 ...\n",
-      " LED: 2    | Arm: 0 |\n",
-      " Action: P | Arm: 0 | Reward: -1 \n",
-      " Action: P | Arm: 0 | Reward: -1 \n",
-      " Action: R | Arm: 1 | Reward: -1 \n",
+      " LED: 3    | Arm: 0 |\n",
       " Action: L | Arm: 0 | Reward: -1 \n",
       " Action: P | Arm: 0 | Reward: -1 \n",
       " Action: R | Arm: 1 | Reward: -1 \n",
       " Action: R | Arm: 2 | Reward: -1 \n",
       " Action: L | Arm: 1 | Reward: -1 \n",
+      " Action: P | Arm: 1 | Reward: -1 \n",
       " Action: L | Arm: 0 | Reward: -1 \n",
-      " Action: L | Arm: 0 | Reward: -1 \n",
+      " Action: P | Arm: 0 | Reward: -1 \n",
       " Action: R | Arm: 1 | Reward: -1 \n",
-      " Action: R | Arm: 2 | Reward: -1 \n",
-      " Action: L | Arm: 1 | Reward: -1 \n",
-      " Action: P | Arm: 1 | Reward: -1 \n",
-      " Action: L | Arm: 0 | Reward: -1 \n",
-      " Action: L | Arm: 0 | Reward: -1 \n",
-      " Action: R | Arm: 1 | Reward: -1 \n",
-      " Action: P | Arm: 1 | Reward: -1 \n",
-      " Action: P | Arm: 1 | Reward: -1 \n",
-      " Action: R | Arm: 2 | Reward: -1 \n",
-      " Action: L | Arm: 1 | Reward: -1 \n",
-      " Action: P | Arm: 1 | Reward: -1 \n",
       " Action: R | Arm: 2 | Reward: -1 \n",
       " Action: P | Arm: 2 | Reward: -1 \n",
-      "Final Score: -24\n"
+      " Action: L | Arm: 1 | Reward: -1 \n",
+      " Action: R | Arm: 2 | Reward: -1 \n",
+      " Action: L | Arm: 1 | Reward: -1 \n",
+      " Action: R | Arm: 2 | Reward: -1 \n",
+      " Action: R | Arm: 3 | Reward: -1 \n",
+      " Action: P | Arm: 3 | Reward: -1 \n",
+      "Final Score: -17\n"
      ]
     }
    ],
@@ -282,7 +274,9 @@
     "\n",
     "Now, you will implement a method known as **Monte Carlo with Exploring Starts** to guide your agent to obtain this optimal policy (printed above).\n",
     "\n",
-    "As part of this algorithm, the agent will maintain a numpy array `Q` with 16 rows and 3 columns.  `Q[s][a]` contains the agent's estimate for its final score, if the game starts in state `s`, the agent selects action `a`, and then all future actions are selected using the optimal policy.\n",
+    "As part of this algorithm, the agent will maintain a numpy array `Q` with 16 rows and 3 columns.  `Q[s][a]` contains ...\n",
+    "\n",
+    "#### STILL NEED TO WRITE ... the agent's estimate for its final score, if the game starts in state `s`, the agent selects action `a`, and then all future actions are selected using the optimal policy.\n",
     "\n",
     "*This description of Monte Carlo Exploring Starts still needs to be fleshed out.  The plan is that the attendee will code everything from scratch.*"
    ]
@@ -347,7 +341,7 @@
     "                    action = random.choice(np.arange(3))\n",
     "                    #print('random:', action)\n",
     "                \n",
-    "                pos, reward, done = env.step(action)\n",
+    "                arm, reward, done = env.step(action)\n",
     "                episode.append((state, action, reward))\n",
     "            else:\n",
     "                break\n",
@@ -374,24 +368,24 @@
      "text": [
       "Episode 70/70.\n",
       "\n",
-      "LED: 0 | Arm: 0 | State: 0 | Best Action: L\n",
+      "LED: 0 | Arm: 0 | State: 0 | Best Action: P\n",
       "LED: 0 | Arm: 1 | State: 1 | Best Action: L\n",
       "LED: 0 | Arm: 2 | State: 2 | Best Action: L\n",
-      "LED: 0 | Arm: 3 | State: 3 | Best Action: P\n",
+      "LED: 0 | Arm: 3 | State: 3 | Best Action: L\n",
       "LED: 1 | Arm: 0 | State: 4 | Best Action: R\n",
       "LED: 1 | Arm: 1 | State: 5 | Best Action: P\n",
-      "LED: 1 | Arm: 2 | State: 6 | Best Action: P\n",
-      "LED: 1 | Arm: 3 | State: 7 | Best Action: R\n",
-      "LED: 2 | Arm: 0 | State: 8 | Best Action: P\n",
-      "LED: 2 | Arm: 1 | State: 9 | Best Action: L\n",
+      "LED: 1 | Arm: 2 | State: 6 | Best Action: L\n",
+      "LED: 1 | Arm: 3 | State: 7 | Best Action: L\n",
+      "LED: 2 | Arm: 0 | State: 8 | Best Action: R\n",
+      "LED: 2 | Arm: 1 | State: 9 | Best Action: R\n",
       "LED: 2 | Arm: 2 | State: 10 | Best Action: P\n",
-      "LED: 2 | Arm: 3 | State: 11 | Best Action: P\n",
+      "LED: 2 | Arm: 3 | State: 11 | Best Action: L\n",
       "LED: 3 | Arm: 0 | State: 12 | Best Action: R\n",
-      "LED: 3 | Arm: 1 | State: 13 | Best Action: L\n",
+      "LED: 3 | Arm: 1 | State: 13 | Best Action: R\n",
       "LED: 3 | Arm: 2 | State: 14 | Best Action: R\n",
       "LED: 3 | Arm: 3 | State: 15 | Best Action: P\n",
-      "[False  True  True False  True  True False False False False  True False\n",
-      "  True False  True  True]\n"
+      "[ True  True  True  True  True  True  True  True  True  True  True  True\n",
+      "  True  True  True  True]\n"
      ]
     }
    ],
