--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "And, similar to how you can imagine the human player would learn, the robot will closely watch its score in the game to gauge how well it is doing.  If it is not performing well, it will amend its strategy to do better.  \n",
     "\n",
-    "The algorithm that you will use to play the game is remarkably intuitive.  The robot will learn primarily through trial-and-error, while using its score as a feedback mechanism to hone its strategy.  Its initial behavior will be incredibly random, as it tries out many different moves (or actions) in the game, to collect useful results.  You will use a reinforcement learning algorithm to train your robot to leverage its experience to settle on a well-informed strategy that attains a relatively high score.   \n",
+    "The algorithm that you will use to determine the best gameplay strategy is remarkably intuitive.  The robot will learn primarily through trial-and-error, while using its score as a feedback mechanism to hone its strategy.  Its initial behavior will be incredibly random, as it tries out many different moves (or actions) in the game, to see how its score is affected.  The main idea behind the algorithm is to train the robot to leverage its gameplay experience to gradually obtain a well-informed strategy that attains a relatively high score.  \n",
     "\n",
     "For now, in the next section, we will examine how the robot performs, if it chooses random actions at each time step."
    ]
@@ -89,88 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Round 1 ...\n",
-      " LED: 2    | Arm: 0 | Score:    0 \n",
-      " Action: L | Arm: 0 | Score:   -1 \n",
-      " Action: P | Arm: 0 | Score:   -2 \n",
-      " Action: L | Arm: 0 | Score:   -3 \n",
-      " Action: R | Arm: 1 | Score:   -4 \n",
-      " Action: R | Arm: 2 | Score:   -5 \n",
-      " Action: L | Arm: 1 | Score:   -6 \n",
-      " Action: R | Arm: 2 | Score:   -7 \n",
-      " Action: L | Arm: 1 | Score:   -8 \n",
-      " Action: R | Arm: 2 | Score:   -9 \n",
-      " Action: R | Arm: 3 | Score:  -10 \n",
-      " Action: R | Arm: 3 | Score:  -11 \n",
-      " Action: P | Arm: 3 | Score:  -12 \n",
-      " Action: L | Arm: 2 | Score:  -13 \n",
-      " Action: R | Arm: 3 | Score:  -14 \n",
-      " Action: R | Arm: 3 | Score:  -15 \n",
-      " Action: L | Arm: 2 | Score:  -16 \n",
-      " Action: R | Arm: 3 | Score:  -17 \n",
-      " Action: L | Arm: 2 | Score:  -18 \n",
-      " Action: P | Arm: 2 | Score:  -19 \n",
-      "FINAL SCORE:  -19\n",
-      "-----------------------------------\n",
-      "Starting Round 2 ...\n",
-      " LED: 3    | Arm: 0 | Score:    0 \n",
-      " Action: P | Arm: 0 | Score:   -1 \n",
-      " Action: P | Arm: 0 | Score:   -2 \n",
-      " Action: P | Arm: 0 | Score:   -3 \n",
-      " Action: L | Arm: 0 | Score:   -4 \n",
-      " Action: L | Arm: 0 | Score:   -5 \n",
-      " Action: P | Arm: 0 | Score:   -6 \n",
-      " Action: L | Arm: 0 | Score:   -7 \n",
-      " Action: R | Arm: 1 | Score:   -8 \n",
-      " Action: L | Arm: 0 | Score:   -9 \n",
-      " Action: P | Arm: 0 | Score:  -10 \n",
-      " Action: R | Arm: 1 | Score:  -11 \n",
-      " Action: P | Arm: 1 | Score:  -12 \n",
-      " Action: P | Arm: 1 | Score:  -13 \n",
-      " Action: P | Arm: 1 | Score:  -14 \n",
-      " Action: L | Arm: 0 | Score:  -15 \n",
-      " Action: R | Arm: 1 | Score:  -16 \n",
-      " Action: R | Arm: 2 | Score:  -17 \n",
-      " Action: R | Arm: 3 | Score:  -18 \n",
-      " Action: R | Arm: 3 | Score:  -19 \n",
-      " Action: R | Arm: 3 | Score:  -20 \n",
-      " Action: L | Arm: 2 | Score:  -21 \n",
-      " Action: R | Arm: 3 | Score:  -22 \n",
-      " Action: R | Arm: 3 | Score:  -23 \n",
-      " Action: L | Arm: 2 | Score:  -24 \n",
-      " Action: L | Arm: 1 | Score:  -25 \n",
-      " Action: L | Arm: 0 | Score:  -26 \n",
-      " Action: R | Arm: 1 | Score:  -27 \n",
-      " Action: P | Arm: 1 | Score:  -28 \n",
-      " Action: L | Arm: 0 | Score:  -29 \n",
-      " Action: L | Arm: 0 | Score:  -30 \n",
-      " Action: P | Arm: 0 | Score:  -31 \n",
-      " Action: R | Arm: 1 | Score:  -32 \n",
-      " Action: P | Arm: 1 | Score:  -33 \n",
-      " Action: R | Arm: 2 | Score:  -34 \n",
-      " Action: L | Arm: 1 | Score:  -35 \n",
-      " Action: L | Arm: 0 | Score:  -36 \n",
-      " Action: R | Arm: 1 | Score:  -37 \n",
-      " Action: L | Arm: 0 | Score:  -38 \n",
-      " Action: L | Arm: 0 | Score:  -39 \n",
-      " Action: R | Arm: 1 | Score:  -40 \n",
-      " Action: R | Arm: 2 | Score:  -41 \n",
-      " Action: P | Arm: 2 | Score:  -42 \n",
-      " Action: R | Arm: 3 | Score:  -43 \n",
-      " Action: R | Arm: 3 | Score:  -44 \n",
-      " Action: P | Arm: 3 | Score:  -45 \n",
-      "FINAL SCORE:  -45\n",
-      "-----------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from jetson_env import JetsonEnv\n",
     "\n",
@@ -220,32 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LED: 0 | Arm: 0 | State:  0 \n",
-      "LED: 0 | Arm: 1 | State:  1 \n",
-      "LED: 0 | Arm: 2 | State:  2 \n",
-      "LED: 0 | Arm: 3 | State:  3 \n",
-      "LED: 1 | Arm: 0 | State:  4 \n",
-      "LED: 1 | Arm: 1 | State:  5 \n",
-      "LED: 1 | Arm: 2 | State:  6 \n",
-      "LED: 1 | Arm: 3 | State:  7 \n",
-      "LED: 2 | Arm: 0 | State:  8 \n",
-      "LED: 2 | Arm: 1 | State:  9 \n",
-      "LED: 2 | Arm: 2 | State: 10 \n",
-      "LED: 2 | Arm: 3 | State: 11 \n",
-      "LED: 3 | Arm: 0 | State: 12 \n",
-      "LED: 3 | Arm: 1 | State: 13 \n",
-      "LED: 3 | Arm: 2 | State: 14 \n",
-      "LED: 3 | Arm: 3 | State: 15 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_led_and_arm(state, nLED=4):\n",
     "    arm = state % nLED\n",
@@ -303,21 +201,28 @@
    "source": [
     "## Monte Carlo with Exploring Starts\n",
     "\n",
+    "As part of this method, the robot will maintain a numpy array `Q` with `16` rows and `3` columns.  \n",
+    "> The entry in the `s`-th row and `a`-th column (`Q[s,a]`) contains the robot's *estimate* for the highest score it can possibly obtain in the game, if the game started in state `s`, and the robot selected action `a` for its first move.  \n",
     "\n",
-    "agent doesn't know optimal policy ... and won't try to estimate directly ... instead will estimate the value of that optimal policy ... as agent plays the game, will keep track of this estimate for each possible game state of how advantageous it is to pick any action ... and then henceforth select optimal actions ...\n",
+    "For the first several games, the estimates in the array will be wildly inaccurate; but, the more experience the agent gets with gameplay, the more it is able to refine these estimates.\n",
     "\n",
-    "As part of this algorithm, the agent maintains a numpy array `Q` with 16 rows and 3 columns.  The entry in the `s`-th row and `a`-th column (`Q[s,a]`) keeps contains the agent's expected final game score, if the game starts in state `s`, the agent selects action `a`, and then the agent refers to the optimal policy to select actions until the game ends.\n",
+    "It is relatively straightforward to determine what these estimates _should_ be, _if_ they are completely accurate.  For instance, consider `Q[3,1]`.  This value corresponds to state `3`, which corresponds to the case where the game starts with the lit LED at position `0`, and the robotic arm is at position `3` (*... please verify this in the section above!*).  If the robot selects action `1` as its first move in the game, then this corresponds to pushing in the current location, which results in a score of `-1`.  Then, at this point, if the agent plays optimally, it can obtain a final score of **at most** `-5`, obtained by selecting actions `0`, `0`, `0`, and `1` to end the game in four more moves.  The agent will try to estimate this value (`Q[3,1]=-5`), along with all other values in the array, from gameplay.  And - amazingly - it will refine these estimates while simultaneously trying to determine the optimal policy.  That is, it does not need to know the optimal policy *a priori* before forming these estimates!\n",
     "\n",
-    "`Q[s,a]` contains ...\n",
+    "This array is deeply connected to the optimal policy.  What's particularly worth noting is that in the event that we have a perfect estimate of **all** of the values in `Q`, we can quickly use it to obtain the optimal policy.  To see this, suppose for now that the robot has a perfect estimate of all of the entries in the `Q` array.  Then, it can get the corresponding optimal action corresponding to any state `s` simply by looking at the `s`-th row in `Q`, or `Q[s,:]`.  As an example, if `s=3`, then `Q[3,:]=[-4, -5, -5]`.  \n",
+    "> Then, to get the optimal action corresponding to state `s`, we need only select the action corresponding to the index that maximizes `Q[s,:]`.  \n",
     "\n",
-    "#### STILL NEED TO WRITE ... the agent's estimate for its final score, if the game starts in state `s`, the agent selects action `a`, and then all future actions are selected using the optimal policy.\n",
+    "In the case that `s=3`, we see that `-4` is the largest entry (which appears at index `0`), and so the optimal action is action `0` (which corresponds to moving left).  Take the time now to check that this lines up with both your intuition and the optimal policy above!  To understand more generally why this is the case, note that each entry in `Q[s,:]` records the final score if the robot follows the optimal policy, for all moves except (potentially) the first.  Then, one of the three available initial moves must be optimal, and it makes sense that the optimal move will correspond to the action (or index) that yields the largest maximum score in `Q[s,:]`.  (_For now, hopefully this is satisfying enough to press forward with implementation!  If you are interested in reading a proof of this fact, you're encouraged to check out the suggested resources at the end of this notebook._)\n",
     "\n",
-    "*This description of Monte Carlo Exploring Starts still needs to be fleshed out.  The plan is that the attendee will code everything from scratch.*"
+    "\n",
+    "\n",
+    "### Implementation Details\n",
+    "\n",
+    "..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -389,38 +294,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Episode 70/70.\n",
-      "\n",
-      "LED: 0 | Arm: 0 | State:  0 | Best Action: P\n",
-      "LED: 0 | Arm: 1 | State:  1 | Best Action: L\n",
-      "LED: 0 | Arm: 2 | State:  2 | Best Action: L\n",
-      "LED: 0 | Arm: 3 | State:  3 | Best Action: L\n",
-      "LED: 1 | Arm: 0 | State:  4 | Best Action: R\n",
-      "LED: 1 | Arm: 1 | State:  5 | Best Action: P\n",
-      "LED: 1 | Arm: 2 | State:  6 | Best Action: L\n",
-      "LED: 1 | Arm: 3 | State:  7 | Best Action: L\n",
-      "LED: 2 | Arm: 0 | State:  8 | Best Action: R\n",
-      "LED: 2 | Arm: 1 | State:  9 | Best Action: R\n",
-      "LED: 2 | Arm: 2 | State: 10 | Best Action: P\n",
-      "LED: 2 | Arm: 3 | State: 11 | Best Action: L\n",
-      "LED: 3 | Arm: 0 | State: 12 | Best Action: R\n",
-      "LED: 3 | Arm: 1 | State: 13 | Best Action: R\n",
-      "LED: 3 | Arm: 2 | State: 14 | Best Action: R\n",
-      "LED: 3 | Arm: 3 | State: 15 | Best Action: P\n",
-      "[ True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Q = monte_carlo(env, 70)\n",
+    "Q = monte_carlo(env, 7000)\n",
     "print('\\n')\n",
     "# print your agent's learned policy\n",
     "for state in range(Q.shape[0]):\n",
@@ -433,25 +311,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ -2.2       ,  -2.375     ,  -4.        ,  -5.85714286,\n",
-       "        -6.66666667,  -4.33333333,  -2.        ,  -3.        ,\n",
-       "       -11.        ,  -7.        ,  -8.5       ,  -3.18181818,\n",
-       "       -13.33333333, -12.33333333,  -5.        ,  -3.        ])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Q[:,0]"
+    "Q[3,:]"
    ]
   },
   {
@@ -484,15 +348,6 @@
     "\n",
     "Our goal is to teach the agent to develop a game-playing strategy to maximize cumulative reward, and you will learn how to design an algorithm to accomplish this soon.  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
